# fuzzyfinder

./: :w  Pipfile  README.md  go.mod  go.sum  main  main.go  main.py  main_test.go  pyproject.toml
address/: address.go  main.go
config/: config.go
gui/: color.go  gui.go
score/: draw.go  finder.go  leven_shtein.go  leven_shtein_test.go  needleman_wunsch.go  needleman_wunsch_test.go  range.go  score.go  smith_waterman.go  util.go  util_test.go
