[tool.poetry]
name = "fuzzyfinder"
version = "0.1.0"
description = ""
authors = ["naronA <otherthan.new@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
pylint = "^2.3"
autopep8 = "^1.4"
pycodestyle = "^2.5"
flake8 = "^3.7"
yapf = "^0.27.0"
python-language-server = "^0.27.0"
mypy = "^0.711.0"
pandas = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
